--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "name": "gcc - Build and debug active file",
       "type": "cppdbg",
       "request": "launch",
-      "program": "${fileDirname}/main",
+      "program": "${workspaceFolder}/album-manager",
       "args": [],
       "stopAtEntry": false,
       "cwd": "${workspaceFolder}",
